--- a/build.gradle
+++ b/build.gradle
@@ -16,9 +16,10 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
     testImplementation 'com.codeborne:selenide:5.11.0'
-    testRuntimeOnly 'org.slf4j:slf4j-simple:1.7.30'
+    testCompile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.30'
+
 }
 
 test {
